left menu pointer and rolling cocktails overlap fixed

--- a/htdocs/t/default.css
+++ b/htdocs/t/default.css
@@ -183,7 +183,7 @@ label{display:block;}
 .b-content .surface{padding:500px;width:10000px;}
 #cocktails-page .b-content {width:100%;}
 #cocktails-page #results_display {padding-left: 23px;}
-#cocktails-page #results_display .viewport {width:440px;margin-left: 110px;}
+#cocktails-page #results_display .viewport {width:440px;margin-left: 120px;}
 #cocktails-page #results_display.expanded .viewport {width:550px;margin-left: 0;}
 #cocktails-page #results_display .point{height:560px;width:440px;float:left;}
 #cocktails-page #results_display.expanded .point{width:550px;}
